# SimbaPluginTemplate

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  exports.cpp  exports.h  main.cpp
rust/: Cargo.toml  README.md
rust/src/: lib.rs
